# JSONparser

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt  IObject.h  JsonParser.h
lib/exceptions/: WrongTypeException.cpp  WrongTypeException.h
lib/types/Classes/: ArrayValue.cpp  ArrayValue.h  BoolValue.cpp  BoolValue.h  NullValue.cpp  NullValue.h  NumberValue.cpp  NumberValue.h  ObjectValue.cpp  ObjectValue.h  StringValue.cpp  StringValue.h
lib/types/Enums/: ValueType.cpp  ValueType.h
lib/types/Interfaces/: IValue.cpp  IValue.h
